[gd_scene load_steps=4 format=2]

[ext_resource path="res://interface/interface.gd" type="Script" id=1]
[ext_resource path="res://interface/bar/LifeBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/counter/Counter.tscn" type="PackedScene" id=3]

[node name="Interface" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 151.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "custom_constants" ]

[node name="Bars" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 30.0
margin_top = 30.0
margin_right = 530.0
margin_bottom = 127.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Size Flags" ]

[node name="LifeBar" parent="Bars" instance=ExtResource( 2 )]
margin_right = 550.0

[node name="Counters" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -164.0
margin_top = 33.0
margin_right = -30.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 2
_sections_unfolded = [ "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="RupeeCounter" parent="Counters" instance=ExtResource( 3 )]
margin_left = 34.0
margin_right = 134.0
margin_bottom = 67.0

[connection signal="health_updated" from="." to="Bars/LifeBar" method="_on_Interface_health_updated"]
[connection signal="rupees_updated" from="." to="Counters/RupeeCounter" method="_on_Interface_rupees_updated"]
